--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -1,7 +1,69 @@
+* {
+    margin: 10;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
+}
+    html img {
+        width: 100px;
+    }
 /*
-background-grey: #F4F3F4;
-button-purple: #192592
-main-titles dark-grey: #2C303F;
-paragraph grey: #5b5e6d;
-nav grey: #5b5e6d;
+    body {
+        background-grey: #F4F3F4;
+        button-purple: #192592
+        main-titles dark-grey: #2C303F;
+        paragraph grey: #5b5e6d;
+        nav grey: 
+    }
 */
+
+
+@media only screen and (max-width: 768px) {
+
+    .navbar {
+        background-color: #fdfdfd;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        border-bottom: 1px solid rgb(204, 201, 201);
+        border-collapse: collapse;
+    }
+
+    .logo-container {
+        padding-left: 20px; 
+
+    }
+
+    .navbar, ul {
+        line-height: 8px;
+        padding-right: 20px;
+        font-size: smaller;
+        text-align: center;
+
+    } 
+
+    .nav-menu {
+        display: inline-block;
+    }
+
+
+    .nav-menu > li {
+        text-decoration: none;
+        list-style: none;
+
+    }
+
+
+    h1,
+    h2 {
+        font-family: 'Merriweather', serif;
+    }
+
+
+
+
+
+
+
+    
+  }
